if (BUILD_SERVER)
	install(
		FILES		cvmfs_server_hooks.sh.demo
		DESTINATION	"/etc/cvmfs"
		PERMISSIONS	OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
	)
	#install (
	#	FILES			cvmfs-sync
	#	DESTINATION		bin
	#	PERMISSIONS		OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
	#)
endif (BUILD_SERVER)
